--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,24 @@
 server {
     listen 80;
-    location /api/docs/ {
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location ~ ^/api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location ~ ^/(api|admin)/ {
+        proxy_set_header Host $host;
+        proxy_pass http://backend:9001;
+    }
+
+    location ~ ^/static/(admin|rest_framework)/ {
+        root /staticfiles/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
