--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
+        cd backend/
+        pip install -r requirements.txt 
     # Запускаем flake8
     - name: Test with flake8
       # Вызываем flake8 и указываем ему,
