--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,11 @@
 # Не проверять код на соответствие стандартам W503 и F811
 ignore = 
     W503,
-    F811
+    F811,
+    I001
 # Не проверять код в перечисленных директориях:
 exclude = 
+    */api/
     tests/,
     */migrations/,
     venv/,
@@ -13,4 +15,5 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501,
+    *backend/foodgram/:I001
